# PlayerAndBall_YOLO

./: CMakeLists.txt  todo_multiframe_fusion.md  。gitignore
data/: camera_calibration.xml
src/: main_camera_optimized.cc  postprocess.cc  test_basketball_rknn.cpp
utils/: CMakeLists.txt
